# leader-election

./: README.md  docker-compose.yml  pyproject.toml
src/: leader_election.py  main.py
