[tool.poetry]
name = "leader-election"
version = "0.1.0"
description = ""
authors = ["Kangwhi Kim <kkh8123@naver.com>"]

[tool.poetry.dependencies]
python = "^3.11.5"
kazoo = "^2.9.0"
ruff = "^0.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
